HistoryWrap style fix

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -14,10 +14,15 @@
 }
 
 .app_header {
+  position: absolute;
+  width: 100%;
+  height: 70px;
   padding: 10px;
+  z-index: 2;
 
   background-color: #222;
   color: white;
+  overflow-y: hidden;
 }
 
 .app_header h4 {
