--- a/src/components/HistoryWrap/HistoryWrap.css
+++ b/src/components/HistoryWrap/HistoryWrap.css
@@ -1,4 +1,7 @@
 .history_wrap {
-  min-height: 83%;
+  position: relative;
+  height: 100%;
+  padding: 70px 0 60px 0;
   background-color: #e6e6e6;
+  overflow-y: scroll;
 }
